[package]
name = "pastebin-server"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = "0.5.2"
lazy_static = "1.3.0"
dotenv = "0.14.1"
log = "0.4.0"
env_logger = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
short-crypt = "1.0.8"
actix-web = "1.0"
redis = "0.10.0"